src/pairing/pairing_code_creator_test_sync.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be shared between threads safely
 --> $DIR/pairing_code_creator_test_sync.rs:6:5
  |
6 |     the_accepting_sync_trait_fn(creator);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be shared between threads safely
...
9 | fn the_accepting_sync_trait_fn(_creator: impl PairingCodeCreator + Sync) {
  |    ---------------------------                                     ---- required by this bound in `the_accepting_sync_trait_fn`
  |
  = help: within `recipe_calculator_lib::pairing::pairing_code_creator::PairingCodeCreatorImpl<recipe_calculator_lib::pairing::pairing_code_creator::DefaultNowSource, recipe_calculator_lib::pairing::pairing_code_creator::DefaultRandCodeGenerator>`, the trait `std::marker::Sync` is not implemented for `std::rc::Rc<i32>`
  = note: required because it appears within the type `recipe_calculator_lib::pairing::pairing_code_creator::PairingCodeCreatorImpl<recipe_calculator_lib::pairing::pairing_code_creator::DefaultNowSource, recipe_calculator_lib::pairing::pairing_code_creator::DefaultRandCodeGenerator>`
